Created datatable endpoints and updated swagger
